added latest changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div id="boss_health"></div>
         </div>
         <div id="enemy"></div>
-        <div id="avatar"></div>
+        <div id="avatar">
+            <object data="./images/player.svg" width="100%"  height="25%"> </object>
+        </div>
         <div id="user_container">
             <div id="actions_container">
                 <div id="attack_and_roll_container">
