saving latest changes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             </div>
         </div>
         <div >
+            <div id="boss">
+                <!-- <object  id="enemy" data="./images/marg.svg" width="500px"  height="500px"> </object> -->
+            </div>
             <!-- <object  id="enemy" data="./images/marg.svg" width="500px"  height="500px"> </object> -->
-            <object  id="enemy" data="./images/marg.svg" width="500px"  height="500px"> </object>
             <div id="boss_name"></div>
         </div>
         <div id="avatar">
@@ -33,7 +35,6 @@
             <div id="actions_container">
                 <div id="attack_and_roll_container">
                     <button class="action_button" id="attack">Attack</button>
-                    <!-- <button class="action_button" id="dodge">Dodge</button> -->
                     <button id="healing_flask" class="action_button">Use Healing Flask</button>
                 </div>
             </div>
